--- a/simple-counter/package.json
+++ b/simple-counter/package.json
@@ -10,8 +10,6 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
-    "eslint-plugin-jest-dom": "^5.1.0",
-    "eslint-plugin-testing-library": "^6.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
@@ -35,5 +33,14 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint": "^8.48.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-jest-dom": "^5.1.0",
+    "eslint-plugin-prettier": "^5.0.0",
+    "eslint-plugin-testing-library": "^6.0.1",
+    "prettier": "^3.0.2"
   }
 }
