--- a/travel-app/package.json
+++ b/travel-app/package.json
@@ -38,6 +38,7 @@
     "identity-obj-proxy": "^3.0.0",
     "jest-environment-jsdom": "^29.6.4",
     "jest-svg-transformer": "^1.0.0",
+    "msw": "^1.2.5",
     "prettier": "^3.0.2",
     "react-test-renderer": "^18.2.0",
     "typescript": "^5.0.2",
