--- a/travel-app/package.json
+++ b/travel-app/package.json
@@ -11,6 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -36,6 +37,7 @@
     "eslint-plugin-react-refresh": "^0.4.3",
     "eslint-plugin-testing-library": "^6.0.1",
     "identity-obj-proxy": "^3.0.0",
+    "jest": "^29.6.4",
     "jest-environment-jsdom": "^29.6.4",
     "jest-svg-transformer": "^1.0.0",
     "msw": "^1.2.5",
